<resources>
    <string name="app_name">My Dream</string>
    <string name="action_settings">設定</string>
    <string name="action_add">Add</string>
    <string name="action_sort">Sort</string>
    <string name="actressimageView">ActressimageView</string>
    <string name="TextView">TextView</string>
    <string name="actressName">女優</string>
    <string name="actressCup">罩杯</string>
    <string name="actressHeight">身高</string>
    <string name="actressAge">年齡</string>
    <string name="actressUrl">圖片連結</string>
    <string name="addButton">新增</string>
    <string name="finishButton">完成</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="confirm">確認</string>

    <string name="music_key">音樂</string>
    <string name="music1_key">Tokyo</string>
    <string name="music2_key">Pokemon</string>
    <string name="none_key">None</string>
    <string name="music" translatable="false">music</string>
    <string name="music1" translatable="false">music1</string>
    <string name="music2" translatable="false">music2</string>
    <string name="none" translatable="false">none</string>

    <string name="main_notification_channel_name">Primary</string>
    <string name="notification_title">考考你的記憶力</string>
    <string name="notification_body">每天記得要回來考試，看看自己還記不記得女優的資料吧!</string>

</resources>
