<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/questionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="50dp"
        android:text="@string/TextView"
        android:textColor="@color/gray"
        android:textSize="28sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="157dp"
        android:layout_height="122dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="300dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/yesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/gray"
            android:textSize="22sp"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/noButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/gray"
            android:textSize="22sp"
            android:text="@string/no" />

    </RadioGroup>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="300dp"
        style="@style/btn_primary"
        android:text="@string/confirm" />
</FrameLayout>