<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/actressName"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="65dp" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="54dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actressCup"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="108dp" />

    <EditText
        android:id="@+id/editCup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="99dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actressHeight"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="154dp" />

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="144dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actressAge"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="199dp" />

    <EditText
        android:id="@+id/editAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="189dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actressUrl"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="247dp" />

    <EditText
        android:id="@+id/editUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="234dp" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addButton"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="341dp" />

</android.support.constraint.ConstraintLayout>